[package]
name = "proto_usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
tonic = "0.9.2"
prost = "0.11.9"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.9.2"
